# engineering-101

./: .gitignore  COURSE-EVALUATION-2026.md  COURSE-WORKFLOW.md  deploy-course.sh
1-SOLID-Principles/: 0-README.md  IMPLEMENTATION-PROGRESS.md  REORGANIZATION-SUMMARY.md  TESTING-AND-ASSESSMENT-GUIDE.md  TESTING-GUIDES-SUMMARY.md  TESTING-IMPLEMENTATION-STATUS.md  WORKSHOP-COMPLETION-STATUS.md
1-SOLID-Principles/1-Single-class-reponsibility-principle/: README.md
1-SOLID-Principles/2-Open-closed-principle/: README.md
1-SOLID-Principles/4-Interface-segregation-principle/: README.md
1-SOLID-Principles/5-Dependency-segregation-principle/: README.md
1-SOLID-Principles/backend/: TESTING-GUIDE.md
1-SOLID-Principles/frontend/: COURSE-EVALUATION.md  LEARNING-PATH.md  OUTSTANDING-ITEMS.md  PHASE-4-TESTING-REPORT.md  REACT-ADDITIONS-SUMMARY.md  REACT-SOLID-QUICK-REFERENCE.md  README.md  (+2 more)
2-Domain-Driven-Design/: 0-README.md  1-introduction-to-the-domain.md
SOLID-Principles/: README.md
SOLID-Principles/ecom-exercises/Python/: .coverage  pyproject.toml  setup.py
SOLID-Principles/ecom-exercises/Python/.pytest_cache/v/cache/: lastfailed  nodeids
SOLID-Principles/ecom-exercises/Python/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_b32c5994ac6a9622_app_py.html
SOLID-Principles/ecom-exercises/Python/src/bounteous_ecom.egg-info/: SOURCES.txt  requires.txt
SOLID-Principles/ecom-exercises/Python/tests/: test_ecommerce_manager.py
site/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+515 files in other folders)
